--- a/tasks/run.yml
+++ b/tasks/run.yml
@@ -1,13 +1,16 @@
 ---
-- name: Backup IPA default.conf
-  ipafstore:
-    backup: "{{ ipaconf_default_conf }}"
+- name: Import variables specific to distribution
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "vars/{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
+    - "vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    - "vars/{{ ansible_distribution }}.yml"
+    - "vars/default.yml"
 
-- name: Template IPA default.conf
-  template:
-    src: default.conf.j2
-    dest: "{{ ipaconf_default_conf }}"
-    backup: yes
-    owner: root
-    group: root
-    mode: 0644
+- name: Install IPA server
+  include_tasks: ipa.yml
+  when: state|default('present') == 'present'
+
+- name: Install krb5 server
+  include_tasks: krb5.yml
+  when: state|default('present') == 'present'
