--- a/tasks/krb5.yml
+++ b/tasks/krb5.yml
@@ -1,3 +1,11 @@
+- name: Import variables specific to distribution
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "vars/{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
+    - "vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    - "vars/{{ ansible_distribution }}.yml"
+    - "vars/default.yml"
+
 - name: Install {{ krb5_packages }}
   package:
     name: "{{ item }}"
