--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,25 @@
+---
 dependencies:
   - role: victorock.ipa
 
 galaxy_info:
   author: Thomas Woerner, Victor da Costa
-  description: A role to configure IPA
+  description: Role to configure IPA Server
   company: Red Hat, Inc
   license: GPLv3
-  min_ansible_version: 2.0
+  min_ansible_version: 2.4
   platforms:
     - name: Fedora
       versions:
         - 25
-    - name: rhel
+        - 26
+        - 27
+    - name: EL
       versions:
         - 7
-
+        - 7.3
+        - 7.4
+        - 7.5
   galaxy_tags:
     - identity
     - ipa
